# sensitics-diagnostic-lambda

./: .gitignore  Pipfile  README.md
.github/actions/lambda_deploy/: action.yaml
.github/actions/python_setup/: action.yaml
.github/workflows/: lambda-ci.yaml  lambda-deploy-dev.yaml  lambda-deploy-prod.yaml
src/: monitor.py  pyproject.toml  sensitics_sensor_monitor.py
